AC_INIT(libbeep/libbeep_test.c)
AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(libbeep, 1.1.11, no-define)

AC_PROG_CC
AC_HEADER_STDC
AC_PROG_INSTALL
AC_SUBST(INSTALL)

AC_CHECK_HEADERS([stdio.h \
                netinet/in.h \
                string.h \
                stdlib.h \
                pthread.h \
                time.h \
                sys/types.h \
                sys/stat.h \
                unistd.h \
                signal.h \
                syslog.h \
                sys/time.h \
                sys/resource.h \
                sys/wait.h \
                errno.h \
                arpa/inet.h \
                netdb.h \
                sys/socket.h \
                netinet/in_systm.h \
                netinet/ip.h \
                fcntl.h \
                netinet/ip_icmp.h \
                sys/un.h])


AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_CHECK_SIZEOF(char)
AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(long long)
AC_CHECK_SIZEOF(size_t)
AC_TYPE_SIZE_T

AC_FUNC_MMAP
AC_LANG(C)


MYCFLAGS="-Wall -O2 -g"
AC_SUBST(MYCFLAGS)


AC_CONFIG_FILES(Makefile \
                almemsys/Makefile \
                libbeep/Makefile \
		libcw/Makefile \
		cwrand/Makefile \
		cwread/Makefile )

AC_PROG_RANLIB
AC_OUTPUT

